feat(situations-documents): gerer entreprise libre et lier les documents aux situations
