# src/documents/dto/create-document.dto.ts
@@ -1,7 +1,10 @@
 import { DOCTYPE } from '@prisma/client';
-import { IsEnum } from 'class-validator';
+import { IsEnum, IsUUID } from 'class-validator';
 
 export class CreateDocumentDto {
   @IsEnum(DOCTYPE)
   type: DOCTYPE;
+
+  @IsUUID()
+  situationId: string;
 }
